// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar AvatarService when available renders avatar 1`] = `
<div>
  <img
    alt="avatar"
    class="b_theme_undefined b_size_customL"
    src="//center.yandex-team.ru/api/v1/user/crm/avatar/64.jpg"
    srcset="//center.yandex-team.ru/api/v1/user/crm/avatar/64.jpg, //center.yandex-team.ru/api/v1/user/crm/avatar/128.jpg 2x"
  />
</div>
`;

exports[`Avatar AvatarService when unavailable renders first and last name first letters 1`] = `
<div>
  <span
    class="b_fallback b_theme_undefined b_size_customL"
    style="background-color: rgb(222, 129, 1); color: black;"
  >
    <span
      class="b__text"
    >
      PI
    </span>
  </span>
</div>
`;

exports[`Avatar AvatarService when unavailable renders first name first letter 1`] = `
<div>
  <span
    class="b_fallback b_theme_undefined b_size_customL"
    style="background-color: rgb(222, 129, 1); color: black;"
  >
    <span
      class="b__text"
    >
      I
    </span>
  </span>
</div>
`;

exports[`Avatar AvatarService when unavailable renders last name first letter 1`] = `
<div>
  <span
    class="b_fallback b_theme_undefined b_size_customL"
    style="background-color: rgb(222, 129, 1); color: black;"
  >
    <span
      class="b__text"
    >
      P
    </span>
  </span>
</div>
`;

exports[`Avatar AvatarService when unavailable renders letters from login 1`] = `
<div>
  <span
    class="b_fallback b_theme_undefined b_size_customL"
    style="background-color: rgb(126, 170, 241); color: black;"
  >
    <span
      class="b__text"
    >
      u
    </span>
  </span>
</div>
`;

exports[`Avatar AvatarService when unavailable renders letters from name 1`] = `
<div>
  <span
    class="b_fallback b_theme_undefined b_size_customL"
    style="background-color: rgb(50, 119, 163); color: white;"
  >
    <span
      class="b__text"
    >
      WN
    </span>
  </span>
</div>
`;

exports[`Avatar ExternalUserAvatarService renders avatar 1`] = `
<div>
  <img
    alt="avatar"
    class="b_theme_undefined b_size_customL"
    src="//avatars.mds.yandex.net/get-yapic/4000217463/64.jpg"
    srcset="//avatars.mds.yandex.net/get-yapic/4000217463/64.jpg, //avatars.mds.yandex.net/get-yapic/4000217463/128.jpg 2x"
  />
</div>
`;

exports[`Avatar ExternalUserAvatarService renders login letters 1`] = `
<div>
  <span
    class="b_fallback b_theme_undefined b_size_customL"
    style="background-color: rgb(203, 99, 121); color: black;"
  >
    <span
      class="b__text"
    >
      e
    </span>
  </span>
</div>
`;

exports[`Avatar ExternalUserAvatarService renders name letters 1`] = `
<div>
  <span
    class="b_fallback b_theme_undefined b_size_customL"
    style="background-color: rgb(203, 99, 121); color: black;"
  >
    <span
      class="b__text"
    >
      EU
    </span>
  </span>
</div>
`;
